--- a/webflow-embed.html
+++ b/webflow-embed.html
@@ -245,7 +245,7 @@
   const fmtDate = (dt)=> {
     if (!dt) return '-';
     try{
-      return new Date(dt).toLocaleString(undefined,{year:'numeric',month:'short',day:'numeric',hour:'2-digit',minute:'2-digit'});
+      return new Date(dt).toLocaleString('en-US',{year:'numeric',month:'short',day:'numeric',hour:'2-digit',minute:'2-digit'});
     }catch{ return String(dt); }
   };
 
